--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="actual/index.html"
+export_path="entrega/index.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -42,7 +42,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="actual/index.exe"
+export_path="entrega/Abduce.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -66,7 +66,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/modify_resources=true
+application/modify_resources=false
 application/icon=""
 application/file_version=""
 application/product_version=""
