--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="entrega/index.html"
+export_path="final/index.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -42,7 +42,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="entrega/Abduce.exe"
+export_path="final/Abduce.exe"
 script_export_mode=1
 script_encryption_key=""
 
