--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="10-11/index.html"
+export_path="17-11/index.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -42,7 +42,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="10-11/Abduce la vaca.exe"
+export_path="./Abduce la vaca.exe"
 script_export_mode=1
 script_encryption_key=""
 
